tests/ui/type/pattern_types/literals.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/literals.rs:93:62
   |
LL | fn empty_range_at_base_type_min() -> pattern_type!(u32 is 0..0) {
   |                                                              ^ evaluation panicked: exclusive range end at minimum value of type

error[E0080]: evaluation of constant value failed
  --> $DIR/literals.rs:98:63
   |
LL | fn empty_range_at_base_type_min2() -> pattern_type!(u32 is 0..0) {
   |                                                               ^ evaluation panicked: exclusive range end at minimum value of type

error[E0080]: evaluation of constant value failed
  --> $DIR/literals.rs:113:65
   |
LL | fn wraparound_range_at_base_ty_end() -> pattern_type!(u32 is 1..0) {
   |                                                                 ^ evaluation panicked: exclusive range end at minimum value of type

error[E0080]: evaluation of constant value failed
  --> $DIR/literals.rs:118:66
   |
LL | fn wraparound_range_at_base_ty_end2() -> pattern_type!(u32 is 1..0) {
   |                                                                  ^ evaluation panicked: exclusive range end at minimum value of type

error[E0080]: evaluation of constant value failed
  --> $DIR/literals.rs:123:66
   |
LL | fn wraparound_range_at_base_ty_end3() -> pattern_type!(u32 is 1..0) {
   |                                                                  ^ evaluation panicked: exclusive range end at minimum value of type

error[E0308]: mismatched types
  --> $DIR/literals.rs:9:5
   |
LL | fn out_of_range() -> pattern_type!(u32 is 1..) {
   |                      ------------------------- expected `(u32) is 1..` because of return type
LL |     0
   |     ^ expected `(u32) is 1..`, found integer
   |
   = note: expected pattern type `(u32) is 1..`
                      found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/literals.rs:14:5
   |
LL | fn at_range_start() -> pattern_type!(u32 is 1..) {
   |                        ------------------------- expected `(u32) is 1..` because of return type
LL |     1
   |     ^ expected `(u32) is 1..`, found integer
   |
   = note: expected pattern type `(u32) is 1..`
                      found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/literals.rs:19:5
   |
LL | fn in_range() -> pattern_type!(u32 is 1..) {
   |                  ------------------------- expected `(u32) is 1..` because of return type
LL |     2
   |     ^ expected `(u32) is 1..`, found integer
   |
   = note: expected pattern type `(u32) is 1..`
                      found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/literals.rs:24:5
   |
LL | fn negative_lit_on_unsigned_ty() -> pattern_type!(u32 is 1..) {
   |                                     ------------------------- expected `(u32) is 1..` because of return type
LL |     -3
   |     ^^ expected `(u32) is 1..`, found integer
   |
   = note: expected pattern type `(u32) is 1..`
                      found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/literals.rs:29:5
   |
LL | fn negative_lit_in_range() -> pattern_type!(i8 is -5..5) {
   |                               -------------------------- expected `(i8) is -5..=4` because of return type
LL |     -2
   |     ^^ expected `(i8) is -5..=4`, found integer
   |
   = note: expected pattern type `(i8) is -5..=4`
                      found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/literals.rs:34:5
   |
LL | fn positive_lit_in_range_of_signed() -> pattern_type!(i8 is -5..5) {
   |                                         -------------------------- expected `(i8) is -5..=4` because of return type
LL |     2
   |     ^ expected `(i8) is -5..=4`, found integer
   |
   = note: expected pattern type `(i8) is -5..=4`
                      found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/literals.rs:39:5
   |
LL | fn negative_lit_at_range_start() -> pattern_type!(i8 is -5..5) {
   |                                     -------------------------- expected `(i8) is -5..=4` because of return type
LL |     -5
   |     ^^ expected `(i8) is -5..=4`, found integer
   |
   = note: expected pattern type `(i8) is -5..=4`
                      found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/literals.rs:44:5
   |
LL | fn positive_lit_at_range_end() -> pattern_type!(i8 is -5..5) {
   |                                   -------------------------- expected `(i8) is -5..=4` because of return type
LL |     4
   |     ^ expected `(i8) is -5..=4`, found integer
   |
   = note: expected pattern type `(i8) is -5..=4`
                      found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/literals.rs:49:5
   |
LL | fn lit_one_beyond_range_end() -> pattern_type!(i8 is -5..5) {
   |                                  -------------------------- expected `(i8) is -5..=4` because of return type
LL |     5
   |     ^ expected `(i8) is -5..=4`, found integer
   |
   = note: expected pattern type `(i8) is -5..=4`
                      found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/literals.rs:54:5
   |
LL | fn wrong_lit_kind() -> pattern_type!(u32 is 1..) {
   |                        ------------------------- expected `(u32) is 1..` because of return type
LL |     '3'
   |     ^^^ expected `(u32) is 1..`, found `char`
   |
   = note: expected pattern type `(u32) is 1..`
                      found type `char`

error[E0308]: mismatched types
  --> $DIR/literals.rs:59:5
   |
LL | fn char_lit_in_range() -> pattern_type!(char is 'a'..'z') {
   |                           ------------------------------- expected `(char) is 'a'..='y'` because of return type
LL |     'b'
   |     ^^^ expected `(char) is 'a'..='y'`, found `char`
   |
   = note: expected pattern type `(char) is 'a'..='y'`
                      found type `char`

error[E0308]: mismatched types
  --> $DIR/literals.rs:64:5
   |
LL | fn char_lit_out_of_range() -> pattern_type!(char is 'a'..'z') {
   |                               ------------------------------- expected `(char) is 'a'..='y'` because of return type
LL |     'A'
   |     ^^^ expected `(char) is 'a'..='y'`, found `char`
   |
   = note: expected pattern type `(char) is 'a'..='y'`
                      found type `char`

error[E0308]: mismatched types
  --> $DIR/literals.rs:69:5
   |
LL | fn lit_at_unsigned_range_inclusive_end() -> pattern_type!(u32 is 0..=1) {
   |                                             --------------------------- expected `(u32) is 0..=1` because of return type
LL |     1
   |     ^ expected `(u32) is 0..=1`, found integer
   |
   = note: expected pattern type `(u32) is 0..=1`
                      found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/literals.rs:74:5
   |
LL | fn single_element_range() -> pattern_type!(u32 is 0..=0) {
   |                              --------------------------- expected `(u32) is 0..=0` because of return type
LL |     0
   |     ^ expected `(u32) is 0..=0`, found integer
   |
   = note: expected pattern type `(u32) is 0..=0`
                      found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/literals.rs:79:5
   |
LL | fn lit_oob_single_element_range() -> pattern_type!(u32 is 0..=0) {
   |                                      --------------------------- expected `(u32) is 0..=0` because of return type
LL |     1
   |     ^ expected `(u32) is 0..=0`, found integer
   |
   = note: expected pattern type `(u32) is 0..=0`
                      found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/literals.rs:84:5
   |
LL | fn lit_oob_single_element_range_exclusive() -> pattern_type!(u32 is 0..1) {
   |                                                -------------------------- expected `(u32) is 0..=0` because of return type
LL |     1
   |     ^ expected `(u32) is 0..=0`, found integer
   |
   = note: expected pattern type `(u32) is 0..=0`
                      found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/literals.rs:89:5
   |
LL | fn single_element_range_exclusive() -> pattern_type!(u32 is 0..1) {
   |                                        -------------------------- expected `(u32) is 0..=0` because of return type
LL |     0
   |     ^ expected `(u32) is 0..=0`, found integer
   |
   = note: expected pattern type `(u32) is 0..=0`
                      found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/literals.rs:104:5
   |
LL | fn empty_range() -> pattern_type!(u32 is 1..1) {
   |                     -------------------------- expected `(u32) is 1..=0` because of return type
LL |     0
   |     ^ expected `(u32) is 1..=0`, found integer
   |
   = note: expected pattern type `(u32) is 1..=0`
                      found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/literals.rs:109:5
   |
LL | fn empty_range2() -> pattern_type!(u32 is 1..1) {
   |                      -------------------------- expected `(u32) is 1..=0` because of return type
LL |     1
   |     ^ expected `(u32) is 1..=0`, found integer
   |
   = note: expected pattern type `(u32) is 1..=0`
                      found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/literals.rs:129:5
   |
LL | fn wraparound_range() -> pattern_type!(u32 is 2..1) {
   |                          -------------------------- expected `(u32) is 2..=0` because of return type
LL |     1
   |     ^ expected `(u32) is 2..=0`, found integer
   |
   = note: expected pattern type `(u32) is 2..=0`
                      found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/literals.rs:134:5
   |
LL | fn lit_in_wraparound_range() -> pattern_type!(u32 is 2..1) {
   |                                 -------------------------- expected `(u32) is 2..=0` because of return type
LL |     0
   |     ^ expected `(u32) is 2..=0`, found integer
   |
   = note: expected pattern type `(u32) is 2..=0`
                      found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/literals.rs:139:5
   |
LL | fn lit_at_wraparound_range_start() -> pattern_type!(u32 is 2..1) {
   |                                       -------------------------- expected `(u32) is 2..=0` because of return type
LL |     2
   |     ^ expected `(u32) is 2..=0`, found integer
   |
   = note: expected pattern type `(u32) is 2..=0`
                      found type `{integer}`

error: aborting due to 27 previous errors

Some errors have detailed explanations: E0080, E0308.
For more information about an error, try `rustc --explain E0080`.
